--- a/model/Image2Flow.ipynb
+++ b/model/Image2Flow.ipynb
@@ -602,42 +602,26 @@
     "\n",
     "    \n",
     "    # Define the convolutional layers for the image input\n",
-    "    X1 = conv(filters=16*1, kernel_size=3, activation='LeakyReLU', padding='same',kernel_initializer = 'he_normal')(image_input)\n",
+    "    X1 = conv_res_block(image_input, 16)\n",
+    "    X1 = conv_res_block(X1, 16)\n",
     "    X1 = maxpool(pool_size=2)(X1)\n",
-    "    X1 = conv_res_block(X1, 16*1)\n",
-    "    X1_concat = conv_res_block(X1, 16*1)\n",
-    "    X1 = Add()([X1, X1_concat])\n",
-    "    X1 = Activation('LeakyReLU')(X1)\n",
     "    \n",
-    "    \n",
-    "    X2 = conv(filters=48*1, kernel_size=3, activation='LeakyReLU', padding='same',kernel_initializer = 'he_normal')(X1)\n",
+    "    X2 = conv_res_block(X1, 48)\n",
+    "    X2 = conv_res_block(X2, 48)\n",
     "    X2 = maxpool(pool_size=2)(X2)\n",
-    "    X2 = conv_res_block(X2, 48*1)\n",
-    "    X2_concat = conv_res_block(X2, 48*1)\n",
-    "    X2 = Add()([X2, X2_concat])\n",
-    "    X2 = Activation('LeakyReLU')(X2)\n",
     "    \n",
-    "    \n",
-    "    X3 = conv(filters=96*1, kernel_size=3, activation='LeakyReLU', padding='same',kernel_initializer = 'he_normal')(X2)\n",
+    "    X3 = conv_res_block(X2, 96)\n",
+    "    X3 = conv_res_block(X3, 96)\n",
     "    X3 = maxpool(pool_size=2)(X3)\n",
-    "    X3 = conv_res_block(X3, 96*1)\n",
-    "    X3_concat = conv_res_block(X3, 96*1)\n",
-    "    X3 = Add()([X3, X3_concat])\n",
-    "    X3 = Activation('LeakyReLU')(X3)\n",
     "    \n",
-    "    X4 = conv(filters=192*1, kernel_size=3, activation='LeakyReLU', padding='same',kernel_initializer = 'he_normal')(X3)\n",
+    "    X4 = conv_res_block(X3, 192)\n",
+    "    X4 = conv_res_block(X4, 192)\n",
     "    X4 = maxpool(pool_size=2)(X4)\n",
-    "    X4 = conv_res_block(X4, 192*1)\n",
-    "    X4_concat = conv_res_block(X4, 192*1)\n",
-    "    X4 = Add()([X4, X4_concat])\n",
-    "    X4 = Activation('LeakyReLU')(X4)\n",
     "\n",
-    "    X5 = conv(filters=384*1, kernel_size=3, activation='LeakyReLU', padding='same',kernel_initializer = 'he_normal')(X4)\n",
+    "    X5 = conv_res_block(X4, 384)\n",
+    "    X5 = conv_res_block(X5, 384)\n",
     "    X5 = maxpool(pool_size=2)(X5)\n",
-    "    X5 = conv_res_block(X5, 384*1)    \n",
-    "    X5_concat = conv_res_block(X5, 384*1)\n",
-    "    X5 = Add()([X5, X5_concat])\n",
-    "    X5 = Activation('LeakyReLU')(X5)\n",
+    "\n",
     "\n",
     "    G4 = ChebConv(384*1, activation='LeakyReLU', kernel_initializer='he_normal')([template_vertices_input, L])\n",
     "\n",
