--- a/model/Image2Flow.ipynb
+++ b/model/Image2Flow.ipynb
@@ -623,15 +623,16 @@
     "    X5 = maxpool(pool_size=2)(X5)\n",
     "\n",
     "\n",
-    "    G4 = ChebConv(384*1, activation='LeakyReLU', kernel_initializer='he_normal')([template_vertices_input, L])\n",
+    "    template_input = Concatenate()([template_vertices_input, template_pv_input])\n",
+    "    G4 = ChebConv(384, activation='LeakyReLU', kernel_initializer='he_normal')([template_input, L])\n",
     "\n",
     "    proj5 = Projection()([X5,template_vertices_input]) \n",
     "    proj4 = Projection()([X4,template_vertices_input]) \n",
-    "    concat4 = Concatenate()([proj5,proj4, G4,template_vertices_input])\n",
+    "    concat4 = Concatenate()([proj5,proj4, G4, template_input])\n",
     "    \n",
-    "    G3 = graph_res_block(concat4, 288*1)\n",
-    "    G3 = graph_res_block(G3, 288*1)\n",
-    "    G3 = graph_res_block(G3, 288*1)\n",
+    "    G3 = graph_res_block(concat4, 288)\n",
+    "    G3 = graph_res_block(G3, 288)\n",
+    "    G3 = graph_res_block(G3, 288)\n",
     "    \n",
     "    output3 =  ChebConv(dim, activation='LeakyReLU', name = 'output3')([G3, L])    \n",
     "    output3 = Add(name = 'output3')([template_vertices_input,output3])\n",
@@ -641,15 +642,15 @@
     "    \n",
     "    P3, V3 = Lambda(split_tensor)(CFD3)\n",
     "    \n",
-    "    G3 = ChebConv(144*1, activation='LeakyReLU')([G3,L])\n",
+    "    G3 = ChebConv(144, activation='LeakyReLU')([G3,L])\n",
     "\n",
     "    proj3 = Projection()([X3, output3]) \n",
     "    proj2 = Projection()([X2, output3])     \n",
     "    concat3 = Concatenate()([proj3,proj2, G3, output3])\n",
     "\n",
-    "    G2 = graph_res_block(concat3, 96*1)\n",
-    "    G2 = graph_res_block(G2, 96*1)\n",
-    "    G2 = graph_res_block(G2, 96*1)\n",
+    "    G2 = graph_res_block(concat3, 96)\n",
+    "    G2 = graph_res_block(G2, 96)\n",
+    "    G2 = graph_res_block(G2, 96)\n",
     "    \n",
     "    output2 =  ChebConv(dim, activation='LeakyReLU')([G2, L])        \n",
     "    output2 = Add(name = 'output2')([output3,output2])\n",
@@ -659,14 +660,14 @@
     "    \n",
     "    P2, V2 = Lambda(split_tensor)(CFD2)\n",
     "    \n",
-    "    G2 = ChebConv(64*1, activation='LeakyReLU')([G2,L])\n",
+    "    G2 = ChebConv(64, activation='LeakyReLU')([G2,L])\n",
     "    proj2 = Projection()([X2,output2]) \n",
     "    proj1 = Projection()([X1,output2]) \n",
     "    concat2 = Concatenate()([proj2, proj1, G2, output2])\n",
     "    \n",
-    "    G1 = graph_res_block(concat2, 32*1)\n",
-    "    G1 = graph_res_block(G1, 32*1)\n",
-    "    G1 = graph_res_block(G1, 32*1)\n",
+    "    G1 = graph_res_block(concat2, 32)\n",
+    "    G1 = graph_res_block(G1, 32)\n",
+    "    G1 = graph_res_block(G1, 32)\n",
     "    \n",
     "    output1 = ChebConv(dim, activation='LeakyReLU', name = 'output1')([G1, L])\n",
     "    output1 = Add(name = 'output')([output2,output1])\n",
